--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 site: Sidey
 url: #yoururl
-title: Sidey
-description: Simple and minimalistic jekyll blogging theme.
+title: ROC
+description: Record of Curiosity
 twitter:
   username: #yourusername
   card: summary
