--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 site: Sidey
 url: #yoururl
-title: ROC
-description: Record of Curiosity
+title: Record of Curiosity
+description: #Record of Curiosity
 twitter:
-  username: #yourusername
+  username: @RecordCuriosity
   card: summary
   creator: #yourusername
 author:
-  twitter: #yourusername
+  twitter: @RecordCuriosity
   name: #yourusername
   avatar:
   email: #youremail
