--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@ url: #yoururl
 title: Record of Curiosity
 description: #Record of Curiosity
 twitter:
-  username: @RecordCuriosity
+  username: RecordCuriosity
   card: summary
   creator: #yourusername
 author:
-  twitter: @RecordCuriosity
+  twitter: RecordCuriosity
   name: #yourusername
   avatar:
   email: #youremail
